(add new changes on top of this file)

06-11-29 Kasper Skårhøj  <kasperYYYY@typo3.com>

	* Initial release